# unified-unet

./: .gitignore  README.md  pyproject.toml
docs/: index.md
src/: main.py  notebook.ipynb
src/analysis/: __init__.py  checkpoints.py  reconstruction_analysis.py  training_curves.py
src/conf/: main.yaml
src/conf/data/: kvasir.yaml  mnist.yaml  raidium.yaml  signal_1d.yaml
src/conf/experiment/: lower_eta_min_ratio.yaml
src/conf/model/: denoiser_mlp.yaml  denoiser_unet1d.yaml  unet.yaml  unet_segmentation.yaml  wavelet_unet.yaml  wavelet_unet_segmentation.yaml
src/conf/task/: classification.yaml  regression.yaml  segmentation.yaml
src/conf/trainer/: base.yaml
src/data/: __init__.py  kvasir.py  mnist.py  prediction_dataset.py  signal_1d.py
src/metrics/: __init__.py  accuracy.py  compose.py  dice.py  frequency.py  regression.py  wavelet.py
src/models/: __init__.py  model.py  regression_model.py  regressors.py  unet.py  unet_1d.py  wavelet_1d.py  wavelet_unet.py
src/optim/: lr_scheduler.py
